Untrack files in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .editorconfig
+.vscode/
 
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
